# napari-error-reporter

./: .github_changelog_generator  .gitignore  ADMINS  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
napari_error_monitor/: __init__.py  _opt_in_widget.py  _util.py
napari_error_reporter/: __init__.py  _opt_in_widget.py  _util.py  napari.yaml
tests/: test_napari_error_monitor.py
